--- a/RecnPlay.html
+++ b/RecnPlay.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senac</title>
-    <link rel="stylesheet" href="rec.css">
+    <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li> <a href="rest.html">Início</a> </li>
+                <li> <a href="index.html">Início</a> </li>
                 <li> <a href="sobre.html">Sobre</a> </li>
-                <li> <a href="http://127.0.0.1:5500/recnplay/devpage.html">Contatos</a> 
+                <li> <a href="dev.html">Contatos</a> 
                 
                     <div class="sub-menu-contatos">
                         <ul>
                             <li> <a href="estetic.html">Turma de Estética</a> </li>
-                            <li> <a href="http://127.0.0.1:5500/recnplay/devpage.html">Desenvolvedores</a> </li>
+                            <li> <a href="dev.html">Desenvolvedores</a> </li>
                         </ul>
                     </div>
                 
